force-app/main/default/objects/Commit__c/Commit__c.object-meta.xml
<CustomObject>
    <label>Commit</label>
    <nameField>
        <displayFormat>CMT-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>