force-app/main/default/objects/Commit__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>GitHub_User__c</referenceTo>
    <relationshipLabel>Commits</relationshipLabel>
    <relationshipName>Commits</relationshipName>
    <type>Lookup</type>
</CustomField>