force-app/main/default/objects/Commit__c/fields/Committer__c.field-meta.xml
<CustomField>
    <fullName>Committer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committer</label>
    <referenceTo>GitHub_User__c</referenceTo>
    <relationshipLabel>Commits (Committer)</relationshipLabel>
    <relationshipName>Committer_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>