force-app/main/default/objects/Commit__c/fields/HTML_URL__c.field-meta.xml
<CustomField>
    <fullName>HTML_URL__c</fullName>
    <label>HTML URL</label>
    <type>Url</type>
</CustomField>