force-app/main/default/objects/Commit__c/fields/Tree__c.field-meta.xml
<CustomField>
    <fullName>Tree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tree</label>
    <referenceTo>Tree__c</referenceTo>
    <relationshipLabel>Commits</relationshipLabel>
    <relationshipName>Commits</relationshipName>
    <type>Lookup</type>
</CustomField>