force-app/main/default/objects/Commit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Repository__c</columns>
    <columns>Tree__c</columns>
    <columns>Message__c</columns>
    <columns>SHA__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>